Added RPC messaging structure.

--- a/src/app.html
+++ b/src/app.html
@@ -28,7 +28,7 @@
         --secondary-text-color: #ff4b8d;
         --accent-color: #d6c3ff;
 
-        --datacnt-background-color: #a2a2a241;
+        --datacnt-background-color: rgba(162, 162, 162, 0.12);
         --datacnt-background-border: #ff4b8d;
 
         --accent-purple-color: #924fff;
@@ -66,7 +66,7 @@
         --secondary-text-color: #ff4b8d;
         --accent-color: #887eff;
 
-        --datacnt-background-color: #a2a2a241;
+        --datacnt-background-color: rgba(232, 158, 158, 0.22);
         --datacnt-background-border: #E56399;
 
         --accent-purple-color: #6256ff;
